Fix for scrollbar issue

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,8 +6,6 @@
 
 html {
 	font: 300 normal 10px/1.2 "Open Sans", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-	overflow: auto;
-	overflow-y: scroll;
 	text-rendering: optimizeLegibility;
 	text-size-adjust: 100%;
 }
